# sage-edge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sage/edge/: _version.py
tests/: conftest.py  test_app.py
